--- a/191585.html
+++ b/191585.html
@@ -16,7 +16,7 @@
 <!-- Navigation menu -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand" href="index.html">
-      <img src="images/logo.png" height="60px">
+      <img src="images/logo.png" alt="logo">
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -50,15 +50,15 @@
     <div class="container">
         <div class="row">
             <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4">
-                <img class="img-fluid" src="images/galaxy-wallpaper1.jpg">
+                <img class="img-fluid" src="images/galaxy-wallpaper1.jpg" alt="Image 1">
                 <p>Image 1</p>
             </div>
             <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4">
-                <img class="img-fluid" src="images/galaxy-wallpaper2.jpg"> 
+                <img class="img-fluid" src="images/galaxy-wallpaper2.jpg" alt="Image 2"> 
                 <p>Image 2</p>
             </div>
             <div class="col-12 col-sm-12 col-md-12 col-lg-4 col-xl-4">
-                <img class="img-fluid" src="images/galaxy-wallpaper3.jpg">
+                <img class="img-fluid" src="images/galaxy-wallpaper3.jpg" alt="Image 3">
                 <p>Image 3</p>
             </div>
         </div>
